sources from geotools release 2.6.2